dvwa2(WAF)/dvwa2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa2
  namespace: dvwa2
spec:
  selector:
    app: dvwa2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
